tests/snapshots/relogin__refused_when_the_lock_file_was_replaced.snap
---
source: tests/relogin.rs
expression: "shown(&d, &m.f)"
---

--relogin: not logging out. 1 of 6 check(s) did not pass:
  ok  switch   generation 0001 is current
  ok  journal  the switch's journal is retired: <HOME>/.local/state/ricepilot/journal/done-<TS>.toml
  ok  rescue   <HOME>/.local/state/ricepilot/rescue.sh restores generation 0000 and passes `sh -n`
  ok  links    3 link(s) are exactly what the plan said and what the ledger recorded
  NO  lock     <HOME>/.run/ricepilot.lock is no longer the file this ricepilot locked. it was replaced, so another
               ricepilot could be holding a lock of its own on the new one
  ok  session  WAYLAND_DISPLAY=wayland-1 is there in XDG_RUNTIME_DIR, uwsm's wayland-wm@hyprland.desktop.service is running,
               nothing says ssh, tmux or screen, and the controlling terminal was not looked at (test sandbox)

nothing was run. the switch itself is complete: generation 0001 is what the next login
starts. ricepilot ends a session only when every check above passes.
