tests/snapshots/relogin__the_checks_run_again_after_the_answer.snap
---
source: tests/relogin.rs
expression: tail
---
 yes

--relogin: checked again after your answer, and not logging out. 1 of 6 check(s)
no longer pass:
  ok  switch   generation 0001 is current
  ok  journal  the switch's journal is retired: <HOME>/.local/state/ricepilot/journal/done-<TS>.toml
  NO  rescue   <HOME>/.local/state/ricepilot/rescue.sh is not the script this switch wrote to restore generation 0000
               it is how you get back from a TTY if the next login does not come up
  ok  links    3 link(s) are exactly what the plan said and what the ledger recorded
  ok  lock     this ricepilot holds <HOME>/.run/ricepilot.lock, and it is still the file at that path
  ok  session  inside a Wayland session (wayland-1) that uwsm manages: wayland-wm@hyprland.desktop.service is running

nothing was run. the switch itself is complete: generation 0001 is what the next login
starts. ricepilot ends a session only when every check above passes.
