tests/snapshots/relogin__untouched_every_check_passes.snap
---
source: tests/relogin.rs
expression: "tidy(&relogin::cleared_text(&cleared), &m.f)"
---

--relogin: every check passed.
  ok  switch   generation 0001 is current
  ok  journal  the switch's journal is retired: <HOME>/.local/state/ricepilot/journal/done-<TS>.toml
  ok  rescue   <HOME>/.local/state/ricepilot/rescue.sh restores generation 0000 and passes `sh -n`
  ok  links    3 link(s) are exactly what the plan said and what the ledger recorded
  ok  lock     this ricepilot holds <HOME>/.run/ricepilot.lock, and it is still the file at that path
  ok  session  inside a Wayland session (wayland-1) that uwsm manages: wayland-wm@hyprland.desktop.service is running

`uwsm stop` ends this session the clean way: every window closes, and anything unsaved
in them is lost. the login screen comes back, and the next login starts generation 0001.
if it does not come up, from a TTY (Ctrl+Alt+F2 … F6):
  sh <HOME>/.local/state/ricepilot/rescue.sh
